      ns_param maxupload       102400000 ;# Max size of file upload in bytes.
      ns_param timeout         60        ;# Total seconds to wait for resources.

      ns_section "ns/server/server1/limits"
      ns_param default         "GET  /*" ;# Map default limit to URL.
      ns_param default         "POST /*"
      ns_param default         "HEAD /*"


Code Changes:

   * Make compilation clean under clang

   * Provide names for Ns_Mutex to report meaningful output in
     naviserver statistics.

   * Use poll() as well under Darwin. Per default, poll() returns
     writeable even when the socket is not. However, setting
     SO_SNDLOWAT fixes this (added by this patch). The change makes it
     possible to quer POLLHUP for all platforms.

   * Use "long" instead of "int" for statistics to avoid quick overruns.

   * Added private version of NsBsearch and re-define the "bsearch" to
     point to it for Windows builds. The Windows implementation of
     bsearch appears to be buggy.

    * Rewritten cancellation logic. Cancelled jobs stay in the queue
      and get run on the thread as any other jobs. The differnce is
      only that we mark the cancellation state early (even before
      running the script) so the very first Tcl command in the script
      will be cancelled thus resulting in whole job cancellation. This
      fixes some weird races.

   * Nsv shared variables now have a C API.

   * Experimental event driven IO API, Ns_Event*().

   * New Ns_RegisterAtShutdown() proc handles notification of shutdown and
     wait for completion with timeout.

   * Make Ns_RegisterProxy() public, add ns_register_proxy command.

   * Vectored IO support:

       Ns_ConnSend() now sends all given buffers. Used to send 16 and silently
       discard the rest.

       Increase max iov buffs sent at once.

       Expose iov functionality to higher layers with Ns_ConnWriteVChars(),
       which handles character data, and Ns_ConnWriteV(), which manages data